WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304853
[UIIntelligenceSupport] youtube.com: unable to retrieve context entities from video pages
https://bugs.webkit.org/show_bug.cgi?id=304853
Summary
[UIIntelligenceSupport] youtube.com: unable to retrieve context entities from...
Wenson Hsieh
Reported
2026-01-02 10:32:13 PST
rdar://160218812
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-02 10:32:18 PST
<
rdar://problem/167443473
>
Wenson Hsieh
Comment 2
2026-01-02 10:45:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56010
EWS
Comment 3
2026-01-02 12:47:22 PST
Committed
305053@main
(9c12a46edfdb): <
https://commits.webkit.org/305053@main
> Reviewed commits have been landed. Closing PR #56010 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug